--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-responsive-picture": "^3.2.2",
+    "react-scripts": "3.2.0",
+    "react-swipeable-views": "^0.13.3"
   },
   "scripts": {
     "start": "react-scripts start",
