--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
+    "@react-pdf/renderer": "^1.6.8",
     "classnames": "2.2.6",
     "firebase": "^7.5.0",
+    "headroom.js": "0.9.4",
     "moment": "2.24.0",
     "node-sass": "4.12.0",
     "nouislider": "13.1.5",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap-switch": "15.5.3",
+    "react-copy-to-clipboard": "5.0.1",
+    "react-country-region-selector": "^1.4.5",
     "react-datetime": "2.16.3",
     "react-dom": "^16.12.0",
     "react-responsive-picture": "^3.2.2",
